MidnightLib 1.5.5
- Fixed button always being visible
- Various visual improvements